# Capstone

./: .gitignore  Dockerfile.prod  README.md  docker-compose.yaml  package-lock.json  run-backend.sh  start-local-backend.sh
backend/: Dockerfile  auth.py  pyproject.toml  server.py
backend/database/: __init__.py  migrations.py
backend/models/: __init__.py  accelerometer_data.py  friendship.py  graph_image.py  rep_detail.py  role.py  session.py  set.py  user.py  workout_session.py
backend/routes/: __init__.py  auth.py  friends.py  serial.py  sessions.py  users.py  workouts.py
backend/schemas/: __init__.py  auth.py  friendship.py  session.py  set.py  workout.py
backend/scripts/: migrate_sets.py  populate_db.py  populate_db_helper.py
backend/services/: analysis_service copy.py  analysis_service.py  chart_service.py  csv_analyzer.py  email_service.py  serial_service.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  colorScheme.ts  designTokens.ts  globals.css  main.tsx  theme.ts
frontend/src/components/home/: QuickCreateSessionCard.tsx  QuickStatsCard.tsx  RecentSessionsCard.tsx  SerialStatusCard.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/navigation/: ConnectionIndicator.tsx  Navbar.tsx
frontend/src/components/sessions/: AccelAnalysisChart.tsx  ActiveSetCard.tsx  GraphImagesCard.tsx  LiveAccelChart.tsx  SessionHeader.tsx  SessionInfoCard.tsx  SetAnalysisPanel.tsx  SetDetailsCard.tsx  (+1 more)
frontend/src/contexts/: AuthContext.tsx  SerialStatusContext.tsx
frontend/src/services/: bluetooth.ts  friends.ts  livedata.ts  sessions.ts
frontend/src/types/: api.ts
frontend/src/utils/: api.ts  userUtils.ts
mobile/: README.md  app.json  package-lock.json  package.json  theme.ts
mobile/app/(auth)/: home.tsx  login.tsx
mobile/app/(tabs)/: _layout.tsx  home.tsx  profile.tsx  sessions.tsx
mobile/components/: ProtectedRoute.tsx
mobile/contexts/: AuthContext.tsx
mobile/scripts/: update-env-ip.sh
mobile/services/: api.ts  sessions.ts  users.ts  workouts.ts
mobile/types/: api.ts
sensor/: BasicSerialLog.py  GravityCorrectedSerialLog.py  NewDataPlotter.py  PlotData.py  PlotData1.py  PlotDataMagwick.py  accel_log.csv  accel_log_1.csv  accel_log_2.csv  package-lock.json  package.json  requirements.txt
sensor/BasicAccelData/: BasicAccelData.ino
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.tsx  designTokens.ts  globals.css
ui/src/contexts/: AuthContext.tsx
ui/src/services/: sessions.ts  workouts.ts
ui/src/types/: api.ts
ui/src/utils/: api.ts
(+22 files in other folders)
