[tool.poetry]
name = "fitness-tracker"
version = "0.1.0"
description = "Fitness tracking application with accelerometer data management"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = {extras = ["email"], version = "^2.12.5"}
python-dotenv = "*"
python-jose = {extras = ["cryptography"], version = "*"}
bcrypt = "^4.0.0"
python-multipart = "*"
pyserial = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
