[tool.poetry]
name = "fitness-tracker"
version = "0.1.0"
description = "Fitness tracking application with accelerometer data management"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "*"
bcrypt = "^4.0.0"
fastapi = "*"
matplotlib = "^3.10"
numpy = "^2.4.3"
pandas = "^3.0.1"
pydantic = {extras = ["email"], version = "^2.12.5"}
pyserial = "*"
python-dotenv = "*"
python-jose = {extras = ["cryptography"], version = "*"}
python-multipart = "*"
scipy = "^1.17.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
uvicorn = {extras = ["standard"], version = "*"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
